--- a/day11/package.json
+++ b/day11/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/mrinalvirnave/advent-of-code2020/issues"
   },
-  "homepage": "https://github.com/mrinalvirnave/advent-of-code2020#readme"
+  "homepage": "https://github.com/mrinalvirnave/advent-of-code2020#readme",
+  "dependencies": {
+    "async": "^3.2.0"
+  }
 }
