--- a/day12/.vscode/launch.json
+++ b/day12/.vscode/launch.json
@@ -5,13 +5,13 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
+      "type": "pwa-node",
       "request": "launch",
       "name": "Launch Program",
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}\\day11\\index.js"
+      "program": "${workspaceFolder}\\index-p2.js"
     }
   ]
 }
